Flow: Fixed: Flux doesn't reset
Flow: Fixed: Flux meter should hide on "reset all"
Flow: Fixed: Flux meter location should reset on "reset all"
Flow: Fixed: Friction checkbox doesn't reset
Flow: Fixed: Reset all should reset the "dots" checkbox
Water tower: Fixed: Hose does not reset on "reset all"
Fixed: Pipe drag handles can get lost behind clock control panel and other control panels
Factored out a top level class for the faucet
Switched to use faucet graphics from sugar-and-salt-solutions, see #3058
Removed confirmation on reset all
Water tower: Added a user control to change the angle of the hose
Water tower: Made it so that water can flow out of the hose
Water tower: Added hose graphic
Water tower: Started adding hose
Flow: Improved English units for flux meter
Flow: Added multiple unit sets for flux meter
Flow: Prevent the user from dragging the flux meter out of bounds
Flow: Added readouts for flux meter
Flow: Only show the flux meter if the user has selected it in the control panel
Flow: Split flux meter into front and back layers so the particle go through it
Flow: Added interaction to the flux meter
Flow: Started flux meter
Flow: Added friction and parabolic flow
Fixed units for flow control
Add the draggable sensors in front of the control panels so they can't get lost behind the control panel
Flow: Added t-shaped drag handles to the pipe
Used ResourceGenerator to generate string and image declarations
Changed to use the new common ground/sky background.
# 0.00.14 (51290) Apr 28, 2011
# 0.00.13 (51288) Apr 28, 2011
Converted from swing to piccolo for slider control components, see #2447
Added fluid flow rate control
Fixed: velocity sensor overlap
Improved default starting locations for sensors
Reduced font and made fonts more uniform throughout the sim
Added a border around the fluid density control so it will work with the green button color
Fixed: Fluid Density is expressed in metric (kg/m3) even when units are set to feet